--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -18,7 +18,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "# test comment"
    ]
   },
   {
