simple linear regression code

--- a/simple-linear-regression.ipynb
+++ b/simple-linear-regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "81d33bb3-b982-4541-8f74-9a11f60ee853",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "69cee924-c33d-48be-9f5e-a8c35b9f6668",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "<AxesSubplot:xlabel='total_spend', ylabel='sales'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -263,17 +263,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d68ac515-4a92-448f-9a39-669629df8a1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df['total_spend']\n",
-    "y = df['sales']\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "794eb84d-6e3d-4542-82be-01a68c3cfdc5",
    "metadata": {},
@@ -283,7 +272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
+   "id": "2e7db82d-8957-4d8d-8486-88777fe431b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['total_spend']\n",
+    "y = df['sales']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "f46bb284-1a6e-45c9-a112-d24f044922b8",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "43a4ad8b-1c86-4386-99d1-387e1cc7fd25",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "array([0.04868788, 4.24302822])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "8116aa88-3c50-4c87-9bf7-912546229988",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "array([1338.44397617])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,17 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "16127ccf-bd5d-4fb4-b3e3-3d8adb3cc8ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7efc26bd23d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f3675081a00>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "45c26833-f4dc-46ca-a33a-4cadf003dfb8",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "f88315f1-5936-4c32-a6c2-46001b138ead",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "array([ 3.07615033e-07, -1.89392449e-04,  8.20886302e-02,  2.70495053e+00])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "8dec43fe-1284-40ae-8760-5427145aa6b0",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "array([1317.47033906])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "d67b47b9-5b17-4795-b1fe-478496c405ff",
    "metadata": {},
    "outputs": [],
@@ -459,17 +459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5163d01e-5d77-4155-b1ce-6887d82a3fd6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7efc26bd2dc0>]"
+       "[<matplotlib.lines.Line2D at 0x7f3674fe6ac0>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "11ed2194-acbf-45e0-8ba4-3ceb54fbf4ff",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "a9b42141-272b-466b-8070-de867bad0293",
    "metadata": {},
    "outputs": [
@@ -526,8 +526,8 @@
       "Dep. Variable:                  sales   R-squared:                       0.753\n",
       "Model:                            OLS   Adj. R-squared:                  0.752\n",
       "Method:                 Least Squares   F-statistic:                     603.4\n",
-      "Date:                Wed, 08 Dec 2021   Prob (F-statistic):           5.06e-62\n",
-      "Time:                        20:25:27   Log-Likelihood:                -473.88\n",
+      "Date:                Thu, 06 Jan 2022   Prob (F-statistic):           5.06e-62\n",
+      "Time:                        03:23:31   Log-Likelihood:                -473.88\n",
       "No. Observations:                 200   AIC:                             951.8\n",
       "Df Residuals:                     198   BIC:                             958.4\n",
       "Df Model:                           1                                         \n",
@@ -553,46 +553,6 @@
     "result_linear = smf.ols('sales ~ total_spend', data=df).fit()\n",
     "print(result_linear.summary())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12703567-6239-4743-89a5-9541ce78873c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa21306c-d833-43d2-a55d-6cef72001cf0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80b46d10-83e8-4ad7-b5ec-773ccf3bd2bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87265d0b-e113-429c-802d-d2e23aa2ba34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f4031e4-9064-4cee-ac9a-d1e7ff1e511c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
