new polynomial model

--- a/scikit_learn-linear-regression.ipynb
+++ b/scikit_learn-linear-regression.ipynb
@@ -214,7 +214,7 @@
    "id": "a11aaa01-b19e-447b-8bf4-8349be6219bc",
    "metadata": {},
    "source": [
-    "## Sklearn linear models"
+    "## Scikit-learn linear models"
    ]
   },
   {
